terraform/alb.tf
resource "aws_lb" "main" {
  name               = "${var.project_name}-alb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.alb.id]
  subnets            = data.aws_subnets.albsubnets.ids
  
  tags = {
    Name = "${var.project_name}-alb"
  }
}


resource "aws_lb_target_group" "nginxposp" {
  name = "${var.project_name}-tg"
  port = 80
  protocol = "HTTP"
  vpc_id = data.aws_vpc.pospisilv_vpc.id
  target_type = "ip"

  health_check {
    enabled = true
    healthy_threshold = 2
    unhealthy_threshold = 2
    timeout = 5
    interval = 30
    path = "/"
    matcher = "200"
  }

  tags = {
    Name = "${var.project_name}-tg"
  }
} 


resource "aws_lb_listener" "nginxposp" {
  load_balancer_arn = aws_lb.main.arn
  port = "80"
  protocol = "HTTP"

  default_action {
    type = "forward"
    target_group_arn = aws_lb_target_group.nginxposp.arn
    }
}
